--- a/index.html
+++ b/index.html
@@ -9,87 +9,133 @@
 </head>
 <body>
     <section class="brands">
-    <div class="brands__title"><p class="brands__title--name">РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</p></div>
+    <div class="brands__title"><h2 class="brands__title--name">РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</h2></div>
 
     <div class="brands__slider--mob swiper">
         <ul class="brands__list--mob swiper-wrapper">
             <li class="brands__item--mob swiper-slide">
-                <a class="brands__link" href="#"><img class="brands__img" src="lenovo.svg" alt="lenovo"></a>
+                <div class="brands__container">
+                    <a class="brands__link" href="#"><img class="brands__logo" src="lenovo.svg" alt="lenovo"></a>
+                    <div class="brands__img"><div class="brands__arrow"></div></div>
+                </div>
             </li>
             <li class="brands__item--mob swiper-slide">
-                <a class="brands__link" href="#"><img class="brands__img" src="acer.svg" alt="acer"></a>
+                <div class="brands__container">
+                <a class="brands__link" href="#"><img class="brands__logo" src="acer.svg" alt="acer"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
+            </div>
             </li>
             <li class="brands__item--mob swiper-slide">
-                <a class="brands__link" href="#"><img class="brands__img" src="apple.svg" alt="apple"></a>
+                <div class="brands__container">
+                <a class="brands__link" href="#"><img class="brands__logo" src="apple.svg" alt="apple"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
+            </div>
             </li>
             <li class="brands__item--mob swiper-slide">
-                <a class="brands__link" href="#"><img class="brands__img" src="bosch.svg" alt="bosch"></a>
+                <div class="brands__container">
+                <a class="brands__link" href="#"><img class="brands__logo" src="bosch.svg" alt="bosch"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
+            </div>
             </li>
             <li class="brands__item--mob swiper-slide">
-                <a class="brands__link" href="#"><img class="brands__img" src="hp.svg" alt="hp"></a>
+                <div class="brands__container">
+                <a class="brands__link" href="#"><img class="brands__logo" src="hp.svg" alt="hp"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
+            </div>
             </li>
             <li class="brands__item--mob swiper-slide">
-                <a class="brands__link" href="#"><img class="brands__img" src="samsung.svg" alt="samsung"></a>
+                <div class="brands__container">
+                <a class="brands__link" href="#"><img class="brands__logo" src="samsung.svg" alt="samsung"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
+            </div>
             </li>
             <li class="brands__item--mob swiper-slide">
-                <a class="brands__link" href="#"><img class="brands__img" src="sony.svg" alt="sony"></a>
+                <div class="brands__container">
+                <a class="brands__link" href="#"><img class="brands__logo" src="sony.svg" alt="sony"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
+            </div>
             </li>
             <li class="brands__item--mob swiper-slide">
-                <a class="brands__link" href="#"><img class="brands__img" src="view.svg" alt="viewsonic"></a>
+                <div class="brands__container">
+                <a class="brands__link" href="#"><img class="brands__logo" src="view.svg" alt="view"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
+            </div>
             </li>
             <li class="brands__item--mob swiper-slide">
-                <a class="brands__link" href="#"><img class="brands__img" src="lenovo.svg" alt="lenovo"></a>
+                <div class="brands__container">
+                <a class="brands__link" href="#"><img class="brands__logo" src="lenovo.svg" alt="lenovo"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
+            </div>
             </li>
             <li class="brands__item--mob swiper-slide">
-                <a class="brands__link" href="#"><img class="brands__img" src="acer.svg" alt="acer"></a>
+                <div class="brands__container">
+                <a class="brands__link" href="#"><img class="brands__logo" src="acer.svg" alt="acer"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
+            </div>
             </li>
             <li class="brands__item--mob swiper-slide">
-                <a class="brands__link" href="#"><img class="brands__img" src="apple.svg" alt="apple"></a>
+                <div class="brands__container">
+                <a class="brands__link" href="#"><img class="brands__logo" src="apple.svg" alt="apple"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
+            </div>
             </li>
         </ul>
         <div class="swiper-pagination"></div>
     </div>
 
+
     <div class="brands__slider">
         <ul class="brands__list">
+
             <li class="brands__item">
-                <a class="brands__link" href="#"><img class="brands__img" src="lenovo.svg" alt="lenovo"></a>
+                <a class="brands__link" href="#"><img class="brands__logo" src="lenovo.svg" alt="lenovo"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
             </li>
             <li class="brands__item">
-                <a class="brands__link" href="#"><img class="brands__img" src="acer.svg" alt="acer"></a>
+                <a class="brands__link" href="#"><img class="brands__logo" src="acer.svg" alt="acer"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
             </li>
             <li class="brands__item">
-                <a class="brands__link" href="#"><img class="brands__img" src="apple.svg" alt="apple"></a>
+                <a class="brands__link" href="#"><img class="brands__logo" src="apple.svg" alt="apple"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
             </li>
             <li class="brands__item">
-                <a class="brands__link" href="#"><img class="brands__img" src="bosch.svg" alt="bosch"></a>
+                <a class="brands__link" href="#"><img class="brands__logo" src="bosch.svg" alt="bosch"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
             </li>
             <li class="brands__item">
-                <a class="brands__link" href="#"><img class="brands__img" src="hp.svg" alt="hp"></a>
+                <a class="brands__link" href="#"><img class="brands__logo" src="hp.svg" alt="hp"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
             </li>
             <li class="brands__item">
-                <a class="brands__link" href="#"><img class="brands__img" src="samsung.svg" alt="samsung"></a>
+                <a class="brands__link" href="#"><img class="brands__logo" src="samsung.svg" alt="samsung"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
             </li>
             <li class="brands__item">
-                <a class="brands__link" href="#"><img class="brands__img" src="sony.svg" alt="sony"></a>
+                <a class="brands__link" href="#"><img class="brands__logo" src="sony.svg" alt="sony"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
             </li>
             <li class="brands__item">
-                <a class="brands__link" href="#"><img class="brands__img" src="view.svg" alt="viewsonic"></a>
+                <a class="brands__link" href="#"><img class="brands__logo" src="view.svg" alt="view"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
             </li>
             <li class="brands__item">
-                <a class="brands__link" href="#"><img class="brands__img" src="lenovo.svg" alt="lenovo"></a>
+                <a class="brands__link" href="#"><img class="brands__logo" src="lenovo.svg" alt="lenovo"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
             </li>
             <li class="brands__item">
-                <a class="brands__link" href="#"><img class="brands__img" src="acer.svg" alt="acer"></a>
+                <a class="brands__link" href="#"><img class="brands__logo" src="acer.svg" alt="acer"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
             </li>
             <li class="brands__item">
-                <a class="brands__link" href="#"><img class="brands__img" src="apple.svg" alt="apple"></a>
+                <a class="brands__link" href="#"><img class="brands__logo" src="apple.svg" alt="apple"></a>
+                <div class="brands__img"><div class="brands__arrow"></div></div>
             </li>
         </ul>
     </div>
 
     <div class="next next--show">
-        <button class="button button--show" type="button"></button>
+        <button class="button button--show" type="button">Показать все</button>
     </div>
     </section>
 
